@@ -16,12 +16,28 @@ name: WWW-Scraper-Lite
 provides:
   WWW::Scraper::Lite:
     file: lib/WWW/Scraper/Lite.pm
-    version: 9
+    version: 12
+recommends:
+  CAM::PDF: 1.54
+  CGI: 3.52
+  DBI: 1.616
+  Data::Dumper: 2.130_02
+  Date::Parse: 2.30
+  DateTime: 0.70
+  File::Temp: 0.22
+  Getopt::Long: 2.38
+  HTML::Entities: 3.68
+  Module::Build: 0.38
+  Readonly: 1.03
+  Time::HiRes: 1.972101
 requires:
   Carp: 1.02
   English: 1.01
   HTML::TreeBuilder::XPath: 0.12
+  LWP::UserAgent: 6.02
   Readonly: 1.03
+  strict: 1.04
+  warnings: 1.12
 resources:
   license: http://dev.perl.org/licenses/
-version: 9
+version: 12
