@@ -14,34 +14,34 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 de677d8930558ff5dec7551c780f76345539c566 Build.PL
-SHA1 78600826b9624098c01beb6b69a71ce61ec61b73 Changes
+SHA1 ff88f2d12bd54403b68ee34420d836be384256ea Build.PL
+SHA1 7d51a0e23fc94760ecf3a6c8257f87b55ab1474f Changes
 SHA1 81a92acab0db3860cab270facb095a96a3891110 MANIFEST
-SHA1 585bdf04d5a8ce585990f12b3c9d2bdd5473b43c META.json
-SHA1 d6f00ada7558a51bb206b8422577b7a9f03f6a2f META.yml
+SHA1 0b7f5495aac1c62b87230d8cb7f1d80698101495 META.json
+SHA1 f18562ab9d2a98b8523cef12b8df5d1963f9ab8d META.yml
 SHA1 67d3c5f99c2eae0774a2c1695772232128b6e917 Makefile
 SHA1 5ee080c07e3374ddeb3fc6855edb503bd0c3e0fe README
-SHA1 a84db78583b6767e58a4e14ffe86b5e38d93bf94 bin/indexer
-SHA1 9118a005ac770b8dce1aef32eda89acfcc79c5b8 lib/WWW/Scraper/Lite.pm
-SHA1 b606b7988628ee669ef04b0ee547fa9ebb13be95 t/00-critic.t
-SHA1 c585834db653d365a1f5b6ed37711582c5d0dbd7 t/00-distribution.t
-SHA1 32ec8634d41388a8668f86e29aa3735654b16062 t/00-pod.t
-SHA1 fe2b07e80d35997ff89292ec73afa3b0019a05e3 t/00-podcoverage.t
+SHA1 8e449646046a189595af9614a3bca5478df1c00f bin/indexer
+SHA1 71af50ffd14bfaac87ea43e3c95684dff811121d lib/WWW/Scraper/Lite.pm
+SHA1 bc62677f3d310e1b4a36f96d59e6e756f8c844ba t/00-critic.t
+SHA1 a4d5c885240c24c804abf555a317749f0c261f9b t/00-distribution.t
+SHA1 b25dfd1b35695ba248f212fd7b9fddd46e983472 t/00-pod.t
+SHA1 17dfad46f61fe15fd4b7ff8f004e56b5451c8924 t/00-podcoverage.t
 SHA1 469b2813f4b72867a4b8c3dd6c84b94e92f126a8 t/10-scraper.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.11 (GNU/Linux)
 
-iQIcBAEBAgAGBQJN4rdOAAoJEPG6pZARLr4FhKgP/jHBuhGuRPcsHYMfVOJW3/IJ
-zqUOw/xwnbxEeaFQjefeX17lg79rvUkNlYNjBLIKUMIJ7yHjGp+4UGY1qMaNoBCI
-ZSYWTvRKoyrPnj/BJvLI0kSXtA98W4TGr0i9IUmKgywB5msIQSKRSN5igcgWXc9n
-ahI/zCuwa7RkQGzo7PHkdCmzHoD+83ZqbsSaX2+RLKiRFoa2epziqEdOBJAI06TO
-uLVH1jr7RmGjl5WyO4e2FKPhCNk3kKmEqppSDijumERiV2J3Xj3PVXEC7ZPMPs9B
-bxwFoUMxUUVMGTUM8///O6EMMi3dgbebigirmjX3M6tnDpzq7LO+6m4QdCdWhI+J
-cFCD747owzWlaTIQo6ACUu4TD4MD+Th0PQpKRAZ05QZPOtB3D4dkU9dk6dme1Rtd
-jlj3a8N2GkXAW/VwvHfKjuVbyoA/dwdvomfxxDZEY76ZTrMBkaXHvgJSEfarX/lk
-xlbNi502Y5vMc0GQV3jhDOz4X1XBI5CCwaMTa1OVGovNkQRJ9zAU2VsFs8BYSXos
-OFAmMtuibHdnkh3itT02TgorbuWN+1JlmJpaKqCQfbGvBOwwYRjQ7lURRhftDgfK
-vJPEZC2R8JdL0YTM7I/RfjfNmHuBX76Pj4XnjmI2NdwszXQ1CgGcASKdkhO2BzMV
-EZGyVe3XPpTiAVs3a1oQ
-=6Gss
+iQIcBAEBAgAGBQJN5LkkAAoJEPG6pZARLr4FVxsQALZ1e4iNn2F0j0ANuzWQKVY8
+SWAkuBumGZ7oaG2FCZWHQWwpSGHMVxf1uktHQzTV8LKF7N8smaBqtsH+HIy/FuLs
+S2B1goy+D1vzpvp64B5PzozYCOGwdJz1Y7q3ic+1fYl5o//2fhPBun+/IscdU/xd
+WoAE1xgbUXLzL5oK1c5UTiPakBeK29wfIvCGNxPCjVZqVOMPi5mwbfyVVzsw7Em5
+WL3TClbKmvsjuQD4+XGxz9UkqzUt/pLX71Z9xg2v2C0SJsRdKVpFX4jNFTT52OZ4
+eyv0OMApbzKNEgPilnX+DEbGXtmvH6mjkDVVFYkleuc2cX7V+odki7Y9PesOQMkM
+dsV2VR+sVPhYUgZrc6wsm76Ty7e/FPLsOEBGRfqXtEYYerdcoTGOw8sr7L5bV+yt
+lsrZVdbwdHijLvY5+a3C/xzcWZAFIlohJGCQyM9dQdjY5r3UQHEa3eaIhqEn3Xwg
+wT855viSYCWp5jUcb2p9mxaYQVKTZkO0Bmn40FlFYlmclp866vU61xhkmdVvS1hm
+aE4QcFmE16Km7up3abj54W04bFYj5X7g69eUXFmaA/MqTOxtq13boLrXjhfrHc5A
+/nKAs4sIYRe/QqVT9S3t1dznTJHLlrimPUwEDCJonomrs1DoEXGGiFLNv0K1FtBA
+EvJQKdcsQwOUyGFUsKYz
+=Ce88
 -----END PGP SIGNATURE-----
