@@ -2,9 +2,9 @@
 # vim:ts=8:sw=2:et:sta:sts=2
 #########
 # Author:        rmp
-# Last Modified: $Date: 2011-05-29 16:47:20 +0100 (Sun, 29 May 2011) $
-# Id:            $Id: 00-critic.t 4 2011-05-29 15:47:20Z rmp $
-# $HeadURL: svn+ssh://psyphi.net/repository/svn/www-scraper-lite/branches/prerelease-0.1/t/00-critic.t $
+# Last Modified: $Date: 2011-05-29 22:56:18 +0100 (Sun, 29 May 2011) $
+# Id:            $Id: 00-critic.t 11 2011-05-29 21:56:18Z rmp $
+# $HeadURL: svn+ssh://psyphi.net/repository/svn/www-scraper-lite/trunk/t/00-critic.t $
 #
 package critic;
 use strict;
@@ -12,7 +12,7 @@ use warnings;
 use Test::More;
 use English qw(-no_match_vars);
 
-our $VERSION = do { my ($r) = q$Revision: 4 $ =~ /(\d+)/smx; $r; };
+our $VERSION = do { my ($r) = q$Revision: 11 $ =~ /(\d+)/smx; $r; };
 
 if ( not $ENV{TEST_AUTHOR} ) {
   my $msg = 'Author test.  Set $ENV{TEST_AUTHOR} to a true value to run.';
