@@ -2,10 +2,10 @@
 # vim:ts=8:sw=2:et:sta:sts=2
 #########
 # Author:        rmp
-# Last Modified: $Date: 2011-05-29 16:47:20 +0100 (Sun, 29 May 2011) $ $Author: rmp $
-# Id:            $Id: 00-distribution.t 4 2011-05-29 15:47:20Z rmp $
+# Last Modified: $Date: 2011-05-29 22:56:18 +0100 (Sun, 29 May 2011) $ $Author: rmp $
+# Id:            $Id: 00-distribution.t 11 2011-05-29 21:56:18Z rmp $
 # Source:        $Source: /var/lib/cvsd/cvsroot/Bio-DasLite/Bio-DasLite/t/00-distribution.t,v $
-# $HeadURL: svn+ssh://psyphi.net/repository/svn/www-scraper-lite/branches/prerelease-0.1/t/00-distribution.t $
+# $HeadURL: svn+ssh://psyphi.net/repository/svn/www-scraper-lite/trunk/t/00-distribution.t $
 #
 package distribution;
 use strict;
@@ -13,7 +13,7 @@ use warnings;
 use Test::More;
 use English qw(-no_match_vars);
 
-our $VERSION = do { my @r = (q$Revision: 4 $ =~ /\d+/mxg); sprintf '%d.'.'%03d' x $#r, @r };
+our $VERSION = do { my @r = (q$Revision: 11 $ =~ /\d+/mxg); sprintf '%d.'.'%03d' x $#r, @r };
 
 eval {
   require Test::Distribution;
